# test-rtd

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
doc/: Makefile
doc/src/: classes.rst  comments.rst  concepts.rst  conf.py  configuration.rst  develop.rst  examples.rst  index.rst  install.rst  io.rst  overview.rst  plot.rst  profiles.rst  read_write.rst  snowprofile.rst  stability_tests.rst  uncertainties.rst  units.rst
doc/src/_static/: custom.css
src/snowprofile/: __init__.py  _base_classes.py  _constants.py  classes.py  profiles.py  snowprofile.py  stability_tests.py
src/snowprofile/io/: __init__.py  _caaml6_xml_read.py  _caaml6_xml_write.py  _caaml_parse_utils.py  caaml6_xml.py  internal_json.py  mf_bdclim.py
src/snowprofile/plot/: __init__.py  plot_snowprofile.py  plot_utils.py
tests/: test_caaml6_xml.py  test_io_caaml6_xml.py  test_io_internal_json.py  test_io_mf_bdclim.py  test_merge.py  test_plots.py  test_profiles.py  test_snowprofile.py  test_stability_tests.py
tests/resources/: CAAMLv6.0.5_SnowProfileIACS.xsd  CAAMLv6.0.6_SnowProfileIACS.xsd  DUFISSS_1310_output_20240420.txt  SnowProfile_IACS_SLF22950.xml  TestProfile2.caaml  TestProfile3.caaml  TestProfile4.caaml  densitydata_20240420.txt  medianDerivatives.csv  tempe_strati_20240111.txt
