[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snowprofile"
version = "0.0.1"
dependencies = [
    'pydantic',
    'pandas',
]
requires-python = ">=3.8"

description = "Tools to read and write punctual snow profiles. It includes tools to read and write from and to the international CAAML format."
readme = "README.md"
license = { file = "LICENCE.txt" }
keywords = ["snow profile", "CAAML"]


[project.optional-dependencies]
doc = [
    'sphinx',
    'autodoc_pydantic'
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["snowprofile"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
