[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snowprofile"
version = "0.0.1"
dependencies = [
    'pydantic>=2,<3',
    'pandas',
]
requires-python = ">=3.8"

description = "Tools to read, write and process punctual snow profiles. It includes tools to read and write from and to the international CAAML format."
readme = "README.md"
license = { file = "LICENCE.txt" }
keywords = ["snow profile", "CAAML"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
]


[project.optional-dependencies]
doc = [
    'sphinx',
    'autodoc_pydantic'
]

[tool.setuptools.packages.find]
where = ["src"]
